--- a/studentvoice.html
+++ b/studentvoice.html
@@ -39,7 +39,7 @@
                   <h1></h1>
                 <div class="left">
                     <div class="left_column">
-                    <img src="../photon/images/img_2.jpg" alt="student"/>
+                    <img src="../Project/img/img_2.jpg" alt="student"/>
                     <h3 style="left: 30px;">student name</h3>
                     </div>
                     <div class="right_column">
@@ -48,7 +48,7 @@
                 </div>
                 <div class="right">
                     <div class="right_column">
-                        <img src="../photon/images/person_1.jpg" alt="student"/>
+                        <img src="../Project/img/person_1.jpg" alt="student"/>
                         <h3>student name</h3>
                         <div class="left_column" style="left: -500px; top: -200px;">
                             <p class="message">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, officia iusto! Sit expedita a nihil voluptas? Ducimus tenetur, facilis voluptate provident laboriosam dolores vel nemo, praesentium odit consequatur quisquam libero.</p>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="center">
                     <div class="mid_column">
-                        <img src="../photon/images/person_2.jpg" alt="student"/>
+                        <img src="../Project/img/person_2.jpg" alt="student"/>
                         <h3>student name</h3>
                     </div>
                     <div class="right_column">
