--- a/aboutus.html
+++ b/aboutus.html
@@ -25,7 +25,7 @@
                   <a class="nav-link-active" href="../Project/aboutus.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Student Voice</a>
+                  <a class="nav-link" href="../Project/studentvoice.html">Student Voice</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="../Project/gallery.html">Gallery</a>
